{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 970,
  "lineage": "aa16ad23-5ca4-c483-2c25-7ef45f535913",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:loadbalancer/app/test-alb/2a8e8aaa07e327b1",
            "arn_suffix": "app/test-alb/2a8e8aaa07e327b1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-test-alb-1331782871.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:loadbalancer/app/test-alb/2a8e8aaa07e327b1",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0126c25fd3458bc6c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e925fbe2ef3282f"
              },
              {
                "subnet_id": "subnet-07526f1e92833d2ed"
              }
            ],
            "subnets": [
              "subnet-04e925fbe2ef3282f",
              "subnet-07526f1e92833d2ed"
            ],
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc_id": "vpc-063991dc7c89e018e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ca39a55dc652a3c",
            "arn": "arn:aws:ec2:eu-west-1:050451389344:elastic-ip/eipalloc-08ca39a55dc652a3c",
            "association_id": "eipassoc-04adc9d2723ec6f74",
            "domain": "vpc",
            "id": "eipalloc-08ca39a55dc652a3c",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-086a64157c5a01460",
            "private_dns": "ip-10-0-30-187.eu-west-1.compute.internal",
            "private_ip": "10.0.30.187",
            "public_dns": "ec2-34-253-53-195.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.253.53.195",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:internet-gateway/igw-0c2c92ca9d888a6c6",
            "id": "igw-0c2c92ca9d888a6c6",
            "owner_id": "050451389344",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc_id": "vpc-063991dc7c89e018e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:listener/app/test-alb/2a8e8aaa07e327b1/1eb2fe4369860f99",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:targetgroup/test-tg/3462bf25b84e9dde",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:listener/app/test-alb/2a8e8aaa07e327b1/1eb2fe4369860f99",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:loadbalancer/app/test-alb/2a8e8aaa07e327b1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:targetgroup/test-tg/3462bf25b84e9dde",
            "arn_suffix": "targetgroup/test-tg/3462bf25b84e9dde",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:targetgroup/test-tg/3462bf25b84e9dde",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:050451389344:loadbalancer/app/test-alb/2a8e8aaa07e327b1"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "test-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-063991dc7c89e018e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ca39a55dc652a3c",
            "association_id": "eipassoc-04adc9d2723ec6f74",
            "connectivity_type": "public",
            "id": "nat-0dc965979aa25b1aa",
            "network_interface_id": "eni-086a64157c5a01460",
            "private_ip": "10.0.30.187",
            "public_ip": "34.253.53.195",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04e925fbe2ef3282f",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            }
          },
          "dependencies": [
            "aws_eip.nateip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b062f6c3f1a801431080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0dc965979aa25b1aa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b062f6c3f1a80143",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c2c92ca9d888a6c6",
            "id": "r-rtb-0af5c77c6d4654ee11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0af5c77c6d4654ee1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:route-table/rtb-0b062f6c3f1a80143",
            "id": "rtb-0b062f6c3f1a80143",
            "owner_id": "050451389344",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dc965979aa25b1aa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-063991dc7c89e018e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:route-table/rtb-0af5c77c6d4654ee1",
            "id": "rtb-0af5c77c6d4654ee1",
            "owner_id": "050451389344",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2c92ca9d888a6c6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-063991dc7c89e018e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028acb7c8ce47cac1",
            "route_table_id": "rtb-0b062f6c3f1a80143",
            "subnet_id": "subnet-0b37c9dadb4f27692"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9cc9fe1b836dc09",
            "route_table_id": "rtb-0b062f6c3f1a80143",
            "subnet_id": "subnet-07acb3bb062ba91f6"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd20746d9399e56e",
            "route_table_id": "rtb-0af5c77c6d4654ee1",
            "subnet_id": "subnet-04e925fbe2ef3282f"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1b3dbb5b9837308",
            "route_table_id": "rtb-0af5c77c6d4654ee1",
            "subnet_id": "subnet-07526f1e92833d2ed"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group/sg-0126c25fd3458bc6c",
            "description": "Security group for alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from alb",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0126c25fd3458bc6c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow http inbound traffic from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f99e6775dabfe7b9"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-sg-alb",
            "name_prefix": "",
            "owner_id": "050451389344",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-063991dc7c89e018e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group/sg-0f99e6775dabfe7b9",
            "description": "Security group for api",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from api",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f99e6775dabfe7b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http inbound traffic from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow https inbound traffic from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "demo-sg-api",
            "name_prefix": "",
            "owner_id": "050451389344",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-063991dc7c89e018e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group/sg-0ac4c8ae1503e53d6",
            "description": "Security group for ecs app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from ECS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac4c8ae1503e53d6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic from ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0126c25fd3458bc6c"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "demo-sg-ecs",
            "name_prefix": "",
            "owner_id": "050451389344",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-063991dc7c89e018e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group/sg-03f5c1297b1f8f9b9",
            "description": "Security group for rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from alb",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f5c1297b1f8f9b9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow http inbound traffic from internet",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ac4c8ae1503e53d6"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "demo-sg-rds",
            "name_prefix": "",
            "owner_id": "050451389344",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-063991dc7c89e018e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:subnet/subnet-0b37c9dadb4f27692",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b37c9dadb4f27692",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050451389344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc_id": "vpc-063991dc7c89e018e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:subnet/subnet-07acb3bb062ba91f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07acb3bb062ba91f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050451389344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc_id": "vpc-063991dc7c89e018e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:subnet/subnet-04e925fbe2ef3282f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e925fbe2ef3282f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050451389344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc_id": "vpc-063991dc7c89e018e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:subnet/subnet-07526f1e92833d2ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07526f1e92833d2ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050451389344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc_id": "vpc-063991dc7c89e018e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:vpc/vpc-063991dc7c89e018e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-083137ccde98cf886",
            "default_route_table_id": "rtb-0098533d5a25d7c3a",
            "default_security_group_id": "sg-09dca6bbb9ec9c360",
            "dhcp_options_id": "dopt-00a37dc63cbc985bb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-063991dc7c89e018e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0098533d5a25d7c3a",
            "owner_id": "050451389344",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-0361fdb58878bbd52",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic from alb",
            "from_port": null,
            "id": "sgr-0361fdb58878bbd52",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0126c25fd3458bc6c",
            "security_group_rule_id": "sgr-0361fdb58878bbd52",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "api_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-02a163a31c823b161",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic from api",
            "from_port": null,
            "id": "sgr-02a163a31c823b161",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f99e6775dabfe7b9",
            "security_group_rule_id": "sgr-02a163a31c823b161",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ecs_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-0207b5b3fa8929c0e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic from ECS",
            "from_port": null,
            "id": "sgr-0207b5b3fa8929c0e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ac4c8ae1503e53d6",
            "security_group_rule_id": "sgr-0207b5b3fa8929c0e",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-06e761ad391d9acee",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic from alb",
            "from_port": null,
            "id": "sgr-06e761ad391d9acee",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03f5c1297b1f8f9b9",
            "security_group_rule_id": "sgr-06e761ad391d9acee",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-0784fd549728588f4",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow http inbound traffic from internet",
            "from_port": 80,
            "id": "sgr-0784fd549728588f4",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0f99e6775dabfe7b9",
            "security_group_id": "sg-0126c25fd3458bc6c",
            "security_group_rule_id": "sgr-0784fd549728588f4",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.api_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "api_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-05eaedd24ad2da680",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow http inbound traffic from internet",
            "from_port": 80,
            "id": "sgr-05eaedd24ad2da680",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f99e6775dabfe7b9",
            "security_group_rule_id": "sgr-05eaedd24ad2da680",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "api_https_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-093159d1479fcea3d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow https inbound traffic from internet",
            "from_port": 443,
            "id": "sgr-093159d1479fcea3d",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f99e6775dabfe7b9",
            "security_group_rule_id": "sgr-093159d1479fcea3d",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ecs_alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-00fc290bfcf714a85",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow inbound traffic from ALB",
            "from_port": null,
            "id": "sgr-00fc290bfcf714a85",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0126c25fd3458bc6c",
            "security_group_id": "sg-0ac4c8ae1503e53d6",
            "security_group_rule_id": "sgr-00fc290bfcf714a85",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-08ae25c33b1a4133f",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow http inbound traffic from internet",
            "from_port": 5432,
            "id": "sgr-08ae25c33b1a4133f",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ac4c8ae1503e53d6",
            "security_group_id": "sg-03f5c1297b1f8f9b9",
            "security_group_rule_id": "sgr-08ae25c33b1a4133f",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_sg",
            "aws_security_group.rds_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}